<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <include
        layout="@layout/layout_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linea_light_on"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/bg_bottom_line"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/str_scene_light_on"
            android:textColor="@color/Black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_light_on"
            android:layout_width="60dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:thumb="@drawable/switch_custom_thumb_selector"
            app:track="@drawable/switch_custom_track_selector" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linea_leave_home"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_bottom_line"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linea_light_on">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/str_scene_leave_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/Black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_leave_home"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:thumb="@drawable/switch_custom_thumb_selector"
            app:track="@drawable/switch_custom_track_selector" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linea_back_home"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_bottom_line"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linea_leave_home">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/str_scene_back_home"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/Black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_back_home"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:thumb="@drawable/switch_custom_thumb_selector"
            app:track="@drawable/switch_custom_track_selector" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linea_entertainment"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_bottom_line"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linea_back_home">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/str_scene_entertainment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/Black"
            android:textSize="14sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sw_entertainment"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:thumb="@drawable/switch_custom_thumb_selector"
            app:track="@drawable/switch_custom_track_selector" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>